# XPMaster

./: CMakeLists.txt  README.md  buildProject.sh
scripts/: fillPatterns.py  main.py
scripts/ledmatrixext/: rgb24.py
src/: main.cpp  matrix.cpp  matrix.h  rpc.cpp  rpc.h  usbInterface.h  xpmcommon.h
src/scripting/: python.cpp  python.h  python_matrix.h  scripting.cpp  scripting.h
